--- a/extremeworld/pom.xml
+++ b/extremeworld/pom.xml
@@ -142,8 +142,12 @@
 			<groupId>taobao-sdk</groupId>
 			<artifactId>taobao</artifactId>
 			<version>1.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/src/main/resources/lib/taobao-sdk-java-auto_1438276914491-20150812.jar</systemPath>
+		</dependency>
+
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>aliyun-java-sdk-push</artifactId>
+			<version>2.2.4</version>
 		</dependency>
 
 	</dependencies>
