--- a/extremeworld/src/main/resources/application.properties
+++ b/extremeworld/src/main/resources/application.properties
@@ -1,4 +1,11 @@
-spring.datasource.url=jdbc:mysql://*******/extremeworld?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+server.port = 8443
+server.ssl.key-store = classpath:214011325020929.pfx
+server.ssl.keyStoreType=PKCS12
+#server.ssl.key-store-type = PKCS12
+server.ssl.key-store-password = 214011325020929
+#server.ssl.key-password = 214011325020929
+
+spring.datasource.url=jdbc:mysql://121.42.29.34/extremeworld?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=******
+spring.datasource.password=TANGrui2
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
