--- a/extremeworld/pom.xml
+++ b/extremeworld/pom.xml
@@ -144,6 +144,18 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.qq.connect</groupId>
+			<artifactId>qqconnect</artifactId>
+			<version>2.0</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>commons-codec</artifactId>
+					<groupId>commons-codec</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
 			<groupId>taobao-sdk</groupId>
 			<artifactId>taobao</artifactId>
 			<version>1.0</version>
